feat(serviceaccount): integrate service account with better types
